--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "expo-image": "~1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
