--- a/package.json
+++ b/package.json
@@ -17,40 +17,40 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.28",
-    "expo-av": "~14.0.7",
-    "expo-blur": "~13.0.2",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-haptics": "~13.0.1",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-sensors": "~13.0.9",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.0-preview.23",
+    "expo-av": "~15.0.1",
+    "expo-blur": "~14.0.1",
+    "expo-constants": "~17.0.2",
+    "expo-font": "~13.0.1",
+    "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.0-preview.1",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.0-preview.14",
+    "expo-sensors": "~14.0.1",
+    "expo-splash-screen": "~0.29.4",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.2",
+    "expo-web-browser": "~14.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
     "react-native-awesome-slider": "^2.5.6",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
-    "use-debounce": "^10.0.4",
-    "expo-image": "~1.13.0"
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.0-preview.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
