--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apple-music-sheet-ui",
+  "name": "netflix-ui",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
