--- a/app.json
+++ b/app.json
@@ -29,6 +29,12 @@
     "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "fonts": [
+      {
+        "asset": "assets/fonts/arialic.ttf",
+        "family": "arialic"
+      }
+    ]
   }
 }
