--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.28",
+    "expo": "~51.0.38",
     "expo-av": "~14.0.7",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
@@ -42,12 +42,14 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "use-debounce": "^10.0.4",
-    "expo-image": "~1.13.0"
+    "expo-image": "~1.13.0",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "~0.72.2",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
