--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "use-debounce": "^10.0.4",
     "expo-image": "~1.13.0",
     "@types/react": "~18.2.14",
-    "@types/react-native": "~0.72.2",
-    "typescript": "^5.1.3"
+    "@types/react-native": "~0.72.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
