--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-splash-screen": "~0.29.4",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
+    "expo-video": "^2.0.0-preview.2",
     "expo-web-browser": "~14.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
